--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
   assets:
     - assets/04.png
     - assets/03.png
+    - user.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
