--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   footer: ^0.0.4
   url_launcher: ^6.1.6
   flutter_bootstrap: ^2.0.0
+  data_table_2: ^2.3.8
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
