--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_bootstrap: ^2.0.0
   data_table_2: ^2.3.8
   modal_bottom_sheet: ^2.1.2
+  flutter_pdfview: ^1.2.5
+  path_provider: ^2.0.11
+  http: ^0.13.5
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
