--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   http: ^0.13.5
   webview_flutter: ^3.0.4
   syncfusion_flutter_charts: ^20.3.57
+  flutter_session_manager: ^1.0.3
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
