--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   syncfusion_flutter_charts: ^20.3.57
   flutter_session_manager: ^1.0.3
   shared_preferences: ^2.0.15
+  jwt_decode: ^0.3.1
 
 dev_dependencies:
   flutter_test:
