--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_session_manager: ^1.0.3
   shared_preferences: ^2.0.15
   jwt_decode: ^0.3.1
+  firebase_core: ^2.3.0
 
 dev_dependencies:
   flutter_test:
