--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.0.15
   jwt_decode: ^0.3.1
   firebase_core: ^2.3.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
