--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   jwt_decode: ^0.3.1
   firebase_core: ^2.3.0
   intl: ^0.17.0
+  file_picker: ^5.2.3
+  firebase_storage: ^11.0.6
 
 dev_dependencies:
   flutter_test:
